# test_automation

./: .gitmodules  Dockerfile  README.md
test_automation/: Dockerfile
test_automation/nav_mocap/: CMakeLists.txt  package.xml
test_automation/nav_mocap/config/: nav2_params.yaml  nav2_params_wheeltec.yaml
test_automation/nav_mocap/launch/: bringup_launch.py  localization_launch.py
test_automation/nav_mocap/maps/: map_1749037225.pgm  map_1749037225.yaml
test_automation/test_automation_pkg/: CMakeLists.txt  package.xml
test_automation/test_automation_pkg/bt_xml/: straight_line_test.xml
test_automation/test_automation_pkg/cmake-modules/: FindZMQ.cmake
test_automation/test_automation_pkg/src/: test_automation.cpp
